# FactorioModTranslator

./: .gitignore  .gitlab-ci.yml  FactorioModTranslator.sln  LICENSE  README.md  README_en.md  README_jp.md  package-lock.json  package.json
.github/workflows/: build-and-release.yml
.serena/: project.yml
.serena/memories/: suggested_commands.md  task_completion_checklist.md
docs/: design_document.md  design_document_tauri.md  implementation_plan.md  retrospective.md  task.md  walkthrough.md
src/: index.css  index.html  locales.json  main.js
src-tauri/: Cargo.toml  build_errors.txt  build_output.txt  errors.txt  errors_utf8.txt  tauri.conf.json  test_output.txt
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/models/: cfg.rs  enums.rs  glossary.rs  mod.rs  mod_info.rs  settings.rs  translation.rs
src-tauri/src/services/: cfg_parser.rs  formatter.rs  glossary_service.rs  localization_service.rs  logging.rs  mod.rs  mod_loader.rs  orchestrator.rs  settings_service.rs  translation_engines.rs  translation_history_service.rs  vanilla_translation_service.rs
src-wpf/FactorioModTranslator/: FactorioModTranslator.csproj
src/FactorioModTranslator/: App.xaml  App.xaml.cs  Log.cs  MainWindow.xaml  MainWindow.xaml.cs
tests-wpf/FactorioModTranslator.Tests/: FactorioModTranslator.Tests.csproj  FactorioStringFormatterTests.cs  GlossaryViewModelTests.cs  UseCaseTests.cs
tests/FactorioModTranslator.Tests/: CfgParserTests.cs  FactorioModTranslator.Tests.csproj  ModLoaderTests.cs  UnitTest1.cs
(+44 files in other folders)
